--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,16 +37,20 @@ jobs:
 
      # Add new files to folder ,commit along with other modified files , push
       - id: commit
-        name: Commit Files
+        name: Commit files
         run:
-            git config --local user.name actions-user
-            git config --local user.email "actions@github.com"
-            git add *
-            git commit -am "GH ACTION Headlines $(date)"
-            git push origin main 
+          git config --local user.name actions-user
+
+          git config --local user.email "actions@github.com"
+
+          git add *
+
+          git commit -am "GH ACTION Headlines $(date)"
+
+          git push origin main
+
         env:
           REPO_KEY: ${{secrets.GITHUB_TOKEN}}
 
           username: github-actions
-
           
